<resources>
  <string name="app_name">IP-Rechner</string>
  <string name="ipv4_address">IPv4 Adresse</string>
  <string name="dot">.</string>
  <string name="_192">192</string>
  <string name="_168">168</string>
  <string name="_0">0</string>
  <string name="slash">/</string>
  <string name="_24">24</string>
  <string name="calculate">Berechnen</string>
  <string name="saved">Gespeichertes</string>
  <string name="subnet">Subnetze</string>
  <string name="binary_addresses">Adressen in Binär</string>
  <string name="results">Ergebnisse</string>
  <string name="_28">28</string>
  <string name="From_prefix">Von prefix</string>
  <string name="to">auf</string>
  <string name="subnetMask">Subnetzmaske</string>
  <string name="networkAddress">Netzwerkaddresse</string>
  <string name="networkBroadcast">Netzwerkbroadcast</string>
</resources>
